--- a/communs/pages/acceuil_html/html_css.html
+++ b/communs/pages/acceuil_html/html_css.html
@@ -83,9 +83,15 @@
               >TP 6 | Table</a
             >
           </li>
-          <li><a class="liste" href=""></a></li>
-          <li><a class="liste" href=""></a></li>
-          <li><a class="liste" href=""></a></li>
+          <li><a class="liste" href="../tp7_html-form/index.html"
+            >TP 7 | Formulaire</a
+            >
+          </li>
+          <li><a class="liste" href="../tp8_html-sonEtVideo/index.html"
+            >TP 8 | Son & Vidéo</a
+            >
+          </li>
+          <li><a class="liste" href="../tp9_html-cv/index.html">TP 9 | CV</a></li>
           <li><a class="liste" href=""></a></li>
           <li><a class="liste" href=""></a></li>
           <li><a class="liste" href=""></a></li>
