--- a/communs/pages/tp1_html-base/index.html
+++ b/communs/pages/tp1_html-base/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../../../index.html">
+    <a href="../acceuil_html/html_css.html">
       <button type="button" class="btn">Retour</button>
     </a>
     <h1>Recette de cookies</h1>
