--- a/communs/pages/tp2_htm-couleur/index.html
+++ b/communs/pages/tp2_htm-couleur/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../../../index.html">
+    <a href="../acceuil_html/html_css.html">
       <button class="btn">Retour</button>
     </a>
     <h1>Titre page</h1>
