--- a/communs/pages/tp3_html-pseudoClasse/index.html
+++ b/communs/pages/tp3_html-pseudoClasse/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../../../index.html">
+    <a href="../acceuil_html/html_css.html">
       <button type="button" class="btn">Retour</button>
     </a>
     <h1>Un gros titre <span id="small"><--Je change de couleur</span></h1>
