--- a/communs/pages/tp4_html-nth/index.html
+++ b/communs/pages/tp4_html-nth/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../../../index.html">
+    <a href="../acceuil_html/html_css.html">
       <button class="btn" type="button">Retour</button>
     </a>
     <ul>
