--- a/communs/pages/tp6_html-table/index.html
+++ b/communs/pages/tp6_html-table/index.html
@@ -24,7 +24,7 @@
     />
   </head>
   <body>
-    <a href="../../../index.html">
+    <a href="../acceuil_html/html_css.html">
       <button class="btn" type="button">Retour</button>
     </a>
     <div class="conainer">
