--- a/communs/pages/tp7_html-form/index.html
+++ b/communs/pages/tp7_html-form/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../../../index.html">
+    <a href="../acceuil_html/html_css.html">
       <button class="btn" type="button">Retour</button>
     </a>
 
@@ -63,7 +63,7 @@
               placeholder="Mot de passe"
               required
             />
-            <input type="submit" value="S'inscrire" />
+            <input class="btn" type="submit" value="S'inscrire" />
           </form>
         </article>
         <article>
@@ -76,6 +76,17 @@
               placeholder="Pseudo"
               required
             />
+            <input
+              type="password"
+              name="logMdp"
+              id="logMdp"
+              placeholder="Mot de passe"
+            />
+            <label class="container-form">
+              <p>Rester connecter</p>
+              <input type="checkbox" name="checkboxLog" id="checkboxLog" />
+            </label>
+            <input class="btn" type="submit" value="Se connecter" />
           </form>
         </article>
       </section>
