Ajout tp Bootstrap

--- a/communs/pages/acceuil_bootstrap/index.html
+++ b/communs/pages/acceuil_bootstrap/index.html
@@ -33,10 +33,10 @@
                 <a class="textD-none" href="../../../../index.html">Acceuil</a>
               </li>
               <li class="navItem">
-                <a class="textD-none bold" href="#">HTML | CSS</a>
+                <a class="textD-none" href="#">HTML | CSS</a>
               </li>
               <li class="navItem">
-                <a class="textD-none" href="#">Bootstrap</a>
+                <a class="textD-none bold" href="#">Bootstrap</a>
               </li>
               <li class="navItem"><a class="textD-none" href="#">JS</a></li>
               <li class="navItem">
@@ -50,56 +50,5 @@
         </div>
       </nav>
     </header>
-
-    <main>
-      <article>
-        <ul>
-          <li>
-            <a class="liste" href="../html/tp1_html-base/index.html"
-              >TP 1 | Base</a
-            >
-          </li>
-          <li>
-            <a class="liste" href="../html/tp2_htm-couleur/index.html"
-              >TP 2 | Couleurs</a
-            >
-          </li>
-          <li>
-            <a
-              class="liste"
-              href="../html/tp3_html-pseudoClasse/index.html"
-              >TP 3 | Pseudo-Classe</a
-            >
-          </li>
-          <li>
-            <a class="liste" href="../html/tp4_html-nth/index.html"
-              >TP 4 | nth</a
-            >
-          </li>
-          <li>
-            <a class="liste" href="../html/tp5_html-shadows/index.html"
-              >TP 5 | shadows</a
-            >
-          </li>
-          <li>
-            <a class="liste" href="../html/tp6_html-table/index.html"
-              >TP 6 | Table</a
-            >
-          </li>
-          <li><a class="liste" href="../html/tp7_html-form/index.html"
-            >TP 7 | Formulaire</a
-            >
-          </li>
-          <li><a class="liste" href="../html/tp8_html-sonEtVideo/index.html"
-            >TP 8 | Son & Vidéo</a
-            >
-          </li>
-          <li><a class="liste" href="../html/tp9_html-cv/index.html">TP 9 | CV</a></li>
-          <li><a class="liste" href=""></a></li>
-          <li><a class="liste" href=""></a></li>
-          <li><a class="liste" href=""></a></li>
-        </ul>
-      </article>
-    </main>
   </body>
 </html>
