--- a/communs/pages/html/tp8_html-sonEtVideo/index.html
+++ b/communs/pages/html/tp8_html-sonEtVideo/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -24,25 +24,25 @@
     />
   </head>
   <body>
-    <a href="../acceuil_html/html_css.html">
+    <a href="../../acceuil_html/html_css.html">
       <button class="btn" type="button">Retour</button>
     </a>
     <main class="container">
       <article>
         <video
-          src="../../../assets/video/Bullion-Blue-Pedro.mp4"
+          src="../../../../assets/video/Bullion-Blue-Pedro.mp4"
           controls
           autoplay
           muted
         ></video>
         <audio
-          src="../../../assets/son/Bullion-Blue-Pedro.mp3"
+          src="../../../../assets/son/Bullion-Blue-Pedro.mp3"
           controls
           autoplay
           muted
         ></audio>
         <audio
-          src="../../../assets/son/Bullion-Blue-Pedro.mp3"
+          src="../../../../assets/son/Bullion-Blue-Pedro.mp3"
           autoplay
         ></audio>
         <iframe
@@ -62,8 +62,15 @@
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
-            font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
-              Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+            font-family:
+              Interstate,
+              Lucida Grande,
+              Lucida Sans Unicode,
+              Lucida Sans,
+              Garuda,
+              Verdana,
+              Tahoma,
+              sans-serif;
             font-weight: 100;
           "
         >
