--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -34,6 +34,9 @@
                 >HTML | CSS</a
               >
             </li>
+            <li class="navItem">
+              <a class="textD-none" href="#">Bootstrap</a>
+            </li>
             <li class="navItem"><a class="textD-none" href="#">JS</a></li>
             <li class="navItem">
               <a class="textD-none" href="#">PHP</a>
@@ -45,5 +48,15 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <ul>
+        <li><a href="#">tp 1</a></li>
+        <li><a href="#">tp 2</a></li>
+        <li><a href="#">tp 3</a></li>
+        <li><a href="#">tp 4</a></li>
+        <li><a href="#">tp 5</a></li>
+      </ul>
+    </main>
   </body>
 </html>
