--- a/communs/pages/html/tp2_htm-couleur/index.html
+++ b/communs/pages/html/tp2_htm-couleur/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../acceuil_html/html_css.html">
+    <a href="../../acceuil_html/html_css.html">
       <button class="btn">Retour</button>
     </a>
     <h1>Titre page</h1>
