--- a/communs/pages/html/tp9_html-cv/index.html
+++ b/communs/pages/html/tp9_html-cv/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0" />
   </head>
   <body>
-    <a href="../acceuil_html/html_css.html">
+    <a href="../../acceuil_html/html_css.html">
       <button class="btn" type="button">Retour</button>
     </a>
     <main class="row-flex">
@@ -187,12 +187,12 @@
           <ul id="resaux">
             <li>
               <a href="#">
-                <img src="../../../assets/imgs/icons/black/linkedinBlack.png" alt="Logo Linkedin">@ANDRES Tom
+                <img src="../../../../assets/imgs/icons/black/linkedinBlack.png" alt="Logo Linkedin">@ANDRES Tom
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="../../../assets/imgs/icons/black/githubBlack.png" alt="Logo Github">@JABtv
+                <img src="../../../../assets/imgs/icons/black/githubBlack.png" alt="Logo Github">@JABtv
               </a>
             </li>
           </ul>
@@ -202,7 +202,7 @@
       </article>
     </main>
     <div id="original">
-      <img id="origine" src="../../../assets/imgs/CVTomANDRES.webp" alt="CV Original">
+      <img id="origine" src="../../../../assets/imgs/CVTomANDRES.webp" alt="CV Original">
     </div>
   </body>
 </html>
