Ajout tp 10 rate, parce que tu etais de-zoomer sur google| a refaire

--- a/communs/pages/acceuil_bootstrap/index.html
+++ b/communs/pages/acceuil_bootstrap/index.html
@@ -6,6 +6,7 @@
     <title>Acceuil | HTML - CSS</title>
     <!--CSS Site-->
     <link rel="stylesheet" href="../../../src/css/style.css" />
+    <link rel="stylesheet" href="../acceuil_html/style.css">
 
     <!--CSS Page-->
     <link rel="stylesheet" href="style.css" />
@@ -33,7 +34,7 @@
                 <a class="textD-none" href="../../../../index.html">Acceuil</a>
               </li>
               <li class="navItem">
-                <a class="textD-none" href="#">HTML | CSS</a>
+                <a class="textD-none" href="../acceuil_html/html_css.html">HTML | CSS</a>
               </li>
               <li class="navItem">
                 <a class="textD-none bold" href="#">Bootstrap</a>
@@ -50,5 +51,25 @@
         </div>
       </nav>
     </header>
+    <main>
+      <article>
+        <ul>
+          <li>
+            <a class="liste" href="../bootstrap/tp1_bootstrap-grille/index.html"
+              >TP 1 | Grille</a
+            >
+          </li>
+          <li>
+            <a class="liste" href="../bootstrap/tp2_bootstrap-placement/index.html"
+              >TP 2 | Placement 1 & 2</a
+            >
+          </li>
+          <li><a class="liste" href="../bootstrap/tp3_bootstrap-couleurMarges/">TP 3 | Couleurs & Marges</a></li>
+          <li><a class="liste" href="../bootstrap/tp4_bootstrap-module/index.html">TP 4 | Module</a></li>
+          <li><a class="liste" href=""></a></li>
+          <li><a class="liste" href=""></a></li>
+        </ul>
+      </article>
+    </main>
   </body>
 </html>
