--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -48,15 +48,5 @@
         </div>
       </nav>
     </header>
-
-    <main>
-      <ul>
-        <li><a href="#">tp 1</a></li>
-        <li><a href="#">tp 2</a></li>
-        <li><a href="#">tp 3</a></li>
-        <li><a href="#">tp 4</a></li>
-        <li><a href="#">tp 5</a></li>
-      </ul>
-    </main>
   </body>
 </html>
