--- a/communs/pages/acceuil_html/html_css.html
+++ b/communs/pages/acceuil_html/html_css.html
@@ -1,105 +1,88 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Acceuil | HTML - CSS</title>
-    <!--CSS Site-->
-    <link rel="stylesheet" href="../../../src/css/style.css" />
 
-    <!--CSS Page-->
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Acceuil | HTML - CSS</title>
+  <!--CSS Site-->
+  <link rel="stylesheet" href="../../../src/css/style.css" />
+  <link rel="stylesheet" href="../acceuil_html/style.css">
 
-    <!--Link google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <!--Link google Icons-->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-  </head>
-  <body>
-    <header>
-      <nav class="navbar unselectable">
-        <div class="container">
-          <img class="logo" src="assets/imgs/logoHTML_CSS_JS.png" alt="" />
-            <ul class="navMenu">
-              <li class="navItem">
-                <a class="textD-none" href="../../../../index.html">Acceuil</a>
-              </li>
-              <li class="navItem">
-                <a class="textD-none bold" href="#">HTML | CSS</a>
-              </li>
-              <li class="navItem">
-                <a class="textD-none" href="#">Bootstrap</a>
-              </li>
-              <li class="navItem"><a class="textD-none" href="#">JS</a></li>
-              <li class="navItem">
-                <a class="textD-none" href="#">PHP</a>
-              </li>
-              <li class="navItem">
-                <a class="textD-none" href="#">Contacte</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+  <!--CSS Page-->
+  <link rel="stylesheet" href="style.css" />
 
-    <main>
-      <article>
-        <ul>
-          <li>
-            <a class="liste" href="../html/tp1_html-base/index.html"
-              >TP 1 | Base</a
-            >
+  <!--Link google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+  <!--Link google Icons-->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+</head>
+
+<body>
+  <header>
+    <nav class="navbar unselectable">
+      <div class="container">
+        <img class="logo" src="assets/imgs/logoHTML_CSS_JS.png" alt="" />
+        <ul class="navMenu">
+          <li class="navItem">
+            <a class="textD-none" href="../../../../index.html">Acceuil</a>
           </li>
-          <li>
-            <a class="liste" href="../html/tp2_htm-couleur/index.html"
-              >TP 2 | Couleurs</a
-            >
+          <li class="navItem">
+            <a class="textD-none bold" href="#">HTML | CSS</a>
           </li>
-          <li>
-            <a
-              class="liste"
-              href="../html/tp3_html-pseudoClasse/index.html"
-              >TP 3 | Pseudo-Classe</a
-            >
+          <li class="navItem">
+            <a class="textD-none" href="../acceuil_bootstrap/index.html">Bootstrap</a>
           </li>
-          <li>
-            <a class="liste" href="../html/tp4_html-nth/index.html"
-              >TP 4 | nth</a
-            >
+          <li class="navItem"><a class="textD-none" href="#">JS</a></li>
+          <li class="navItem">
+            <a class="textD-none" href="#">PHP</a>
           </li>
-          <li>
-            <a class="liste" href="../html/tp5_html-shadows/index.html"
-              >TP 5 | shadows</a
-            >
+          <li class="navItem">
+            <a class="textD-none" href="#">Contacte</a>
           </li>
-          <li>
-            <a class="liste" href="../html/tp6_html-table/index.html"
-              >TP 6 | Table</a
-            >
-          </li>
-          <li><a class="liste" href="../html/tp7_html-form/index.html"
-            >TP 7 | Formulaire</a
-            >
-          </li>
-          <li><a class="liste" href="../html/tp8_html-sonEtVideo/index.html"
-            >TP 8 | Son & Vidéo</a
-            >
-          </li>
-          <li><a class="liste" href="../html/tp9_html-cv/index.html">TP 9 | CV</a></li>
-          <li><a class="liste" href=""></a></li>
-          <li><a class="liste" href=""></a></li>
-          <li><a class="liste" href=""></a></li>
         </ul>
-      </article>
-    </main>
-  </body>
+      </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <article>
+      <ul>
+        <li>
+          <a class="liste" href="../html/tp1_html-base/index.html">TP 1 | Base</a>
+        </li>
+        <li>
+          <a class="liste" href="../html/tp2_htm-couleur/index.html">TP 2 | Couleurs</a>
+        </li>
+        <li>
+          <a class="liste" href="../html/tp3_html-pseudoClasse/index.html">TP 3 | Pseudo-Classe</a>
+        </li>
+        <li>
+          <a class="liste" href="../html/tp4_html-nth/index.html">TP 4 | nth</a>
+        </li>
+        <li>
+          <a class="liste" href="../html/tp5_html-shadows/index.html">TP 5 | shadows</a>
+        </li>
+        <li>
+          <a class="liste" href="../html/tp6_html-table/index.html">TP 6 | Table</a>
+        </li>
+        <li><a class="liste" href="../html/tp7_html-form/index.html">TP 7 | Formulaire</a>
+        </li>
+        <li><a class="liste" href="../html/tp8_html-sonEtVideo/index.html">TP 8 | Son & Vidéo</a>
+        </li>
+        <li><a class="liste" href="../html/tp9_html-cv/index.html">TP 9 | CV</a></li>
+        <li><a class="liste" href="../html/tp10_html-flexbox/index.html">TP 10 | Flexbox</a></li>
+        <li><a class="liste" href="#">TP 11 | Grid</a></li>
+        <li><a class="liste" href="#">TP 12 | </a></li>
+      </ul>
+    </article>
+  </main>
+</body>
+
 </html>
