--- a/communs/pages/bootstrap/tp1_bootstrap-grille/index.html
+++ b/communs/pages/bootstrap/tp1_bootstrap-grille/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -13,7 +13,7 @@
   </head>
   <body>
     <a href="../../acceuil_bootstrap/index.html">
-      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-success">Retour</button>
     </a>
     <h1>Les grilles</h1>
     <div class="container card">
