Ajout tp Bootstrap

--- a/communs/pages/bootstrap/tp4_bootstrap-module/index.html
+++ b/communs/pages/bootstrap/tp4_bootstrap-module/index.html
@@ -82,7 +82,7 @@
     </nav>
 
     <section class="d-flex justify-content-center">
-      <div id="example" class="carousel slide">
+      <div id="example" class="carousel slide w-50">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
